Added Live Results Page

--- a/index.html
+++ b/index.html
@@ -65,6 +65,8 @@
 					<li class="dropdown">
 						<a class="dropdown-toggle navcol" data-toggle="dropdown" href="#">Event<span class="caret"></span></a>
 						<ul class="dropdown-menu">
+							<li><a href="liveResults.html">Live Results</a></li>
+							<li role="presentation" class="divider"></li>
 							<li><a href="directions.html">Directions</a></li>
 							<li role="presentation" class="divider"></li>
 							<li><a href="schedule.html">Schedule</a></li>
@@ -163,6 +165,8 @@
     <div class="container">
       <div class="row">
         <div class="col-sm-6">
+					<p><h3 class="headers"><a href="liveResults.html" target="_blank"><b>Check out the live results here!</b></a></h3></p>
+
           <h3 class="headers"><b>When:</b></h3>
           <h3>Saturday, February 13, 2016; 7am-2pm</h3>
           <br />
