--- a/liveResults.html
+++ b/liveResults.html
@@ -65,6 +65,8 @@
 					<li class="dropdown">
 						<a class="dropdown-toggle navcol" data-toggle="dropdown" href="#">Event<span class="caret"></span></a>
 						<ul class="dropdown-menu">
+							<li><a href="liveResults.html">Live Results</a></li>
+							<li role="presentation" class="divider"></li>
 							<li><a href="directions.html">Directions</a></li>
 							<li role="presentation" class="divider"></li>
 							<li><a href="schedule.html">Schedule</a></li>
@@ -122,13 +124,26 @@
           <br /> <!-- BREAK -->
           <br /> <!-- BREAK -->
           <h2 class="headers">Live Results</h2>
-					<p>This will be updated periodically, so keep checking. It will be sorted by time when the fish was weighed.
+					<p>This will be updated periodically, so keep checking. It will be sorted by time when the fish was weighed.</p>
         </div>
+				<div class="col-xs-6">
+					<br /> <!-- BREAK -->
+          <br /> <!-- BREAK -->
+          <br /> <!-- BREAK -->
+          <br /> <!-- BREAK -->
+					<br /> <!-- BREAK -->
+          <br /> <!-- BREAK -->
+					<br /> <!-- BREAK -->
+					<h3 class="headers">Follow us on Twitter @UwecRecreation and post your Jig's Up photos with #JigsUp for chances to win prizes every hour!</h3>
+					<br /> <!-- BREAK -->
+					<br /> <!-- BREAK -->
+					<br /> <!-- BREAK -->
+				</div>
         <!-- #col-sm-6 -->
       </div>
       <!-- #container -->
 			<div class="fluidmedia">
-      	<iframe src="https://docs.google.com/spreadsheets/d/1MbW6ucR1Gnp-WydO5RpIADjK40gRs4TdW0a1Vqc-o9Y/pubhtml?gid=0&amp;single=true&amp;widget=true&amp;headers=false"></iframe>
+      	<iframe src="https://docs.google.com/spreadsheets/d/11qkcczDb8saim6SOrIxxfJInn8joUcZMwaX914G5ovI/pubhtml?gid=1524536550&single=true"></iframe>
 			</div>
 			<!-- #table-responsive -->
       <br /> <!-- BREAK -->
