--- a/sponsors.html
+++ b/sponsors.html
@@ -64,6 +64,8 @@
 					<li class="dropdown">
 						<a class="dropdown-toggle navcol" data-toggle="dropdown" href="#">Event<span class="caret"></span></a>
 						<ul class="dropdown-menu">
+							<li><a href="liveResults.html">Live Results</a></li>
+							<li role="presentation" class="divider"></li>
 							<li><a href="directions.html">Directions</a></li>
 							<li role="presentation" class="divider"></li>
 							<li><a href="schedule.html">Schedule</a></li>
