--- a/index.html
+++ b/index.html
@@ -174,7 +174,8 @@
           <br />
           <!-- BREAK -->
           <blockquote>
-            No need to check in, will-call tickets purchased on-line will be available for pick up at The View starting at 6:30am.
+						Tickets will be available for pick-up at the weigh-in station at Gordy's Market on Lake
+			      Wissota starting at 6:30AM Saturday, February 13th.
           </blockquote>
           <h3 class="headers"><b>Where:</b></h3>
           <h3> Lake Wissota</h3>
