Replaced Index page with a temp

--- a/indexBEFORE.html
+++ b/indexBEFORE.html
@@ -116,23 +116,41 @@
 
 <body>
   <section id="Slider">
+    <div id="carousel" class="carousel slide" data-ride="carousel">
+      <ol class="carousel-indicators">
+        <li data-target="#carousel-example" data-slide-to="0" class="active"></li>
+        <li data-target="#carousel-example" data-slide-to="1"></li>
+        <li data-target="#carousel-example" data-slide-to="2"></li>
+      </ol>
+      <div class="carousel-inner">
+        <div class="item active">
+          <a href="#">
+            <img alt="Image Slider 1" src="images/slider/slide2.jpg" />
+          </a>
+        </div>
+        <div class="item">
+          <a href="#">
+            <img alt="Image Slider 2" src="images/slider/slide1.jpg" />
+          </a>
+        </div>
+        <div class="item">
+          <a href="#">
+            <img alt="Image Slider 3" src="images/slider/slide3.jpg" />
+          </a>
+        </div>
+      </div>
+      <!-- #carousel-inner  -->
+      <a class="left carousel-control" href="#carousel-example" data-slide="prev">
+      </a>
+      <a class="right carousel-control" href="#carousel-example" data-slide="next">
+      </a>
+    </div>
+    <!-- #carousel  -->
     <div class="text-center">
       </br>
       <!-- BREAK -->
       <h1 class="headers"><b>3rd Annual Jig's Up Blugold Ice Fishing Contest</b></h1>
       <h5 class="headers">Presented by Blugold Recreation, UWEC Athletics, and the Lake Wissota Lions Club</h5>
-			<br />
-			<br />
-			<br />
-			<br />
-			<br />
-			<h1 class="headers"><b>CHECK BACK MONDAY AFTERNOON FOR FULL RESULTS</b></h1>
-			<br />
-			<br />
-			<br />
-			<br />
-			<br />
-			<br />
       <img alt="Sponsors Logo" src="images/3logo.png" </img>
       <div class="horizbar">
       </div>
@@ -142,6 +160,113 @@
       <!-- BREAK -->
       </br>
     </div>
+  </section>
+  <section id="content">
+    <div class="container">
+      <div class="row">
+        <div class="col-sm-6">
+					<p><h3 class="headers"><b>CHECK BACK MONDAY FOR FULL RESULTS</b></h3></p>
+
+          <h3 class="headers"><b>When:</b></h3>
+          <h3>Saturday, February 13, 2016; 7am-2pm</h3>
+          <br />
+          <!-- BREAK -->
+          <br />
+          <!-- BREAK -->
+          <blockquote>
+						Tickets will be available for pick-up at the weigh-in station at Gordy's Market on Lake
+			      Wissota starting at 6:30AM Saturday, February 13th.
+          </blockquote>
+          <h3 class="headers"><b>Where:</b></h3>
+          <h3> Lake Wissota</h3>
+          <blockquote>
+            <b>Weigh-In Stations:</b> The Edge Pub &amp; Eatery and Gordy's Market on "Little Lake Wissota"
+            <br />
+            <!-- BREAK -->
+            <b>Prize Distribution:</b> The View on Lake Wissota, 3pm Raffle Prizes, Fish Prizes to be drawn right after
+          </blockquote>
+
+          <h3 class="headers"><b>New This Year:</b></h3>
+          <h3> <a target="_blank" href="assets\kidsevent.pdf">Scheels Kids Ice Fishing Clinic</a></h3>
+
+          <blockquote>
+            Scheels will host a Kids Klub ice fishing clinic at their store on Friday, February 12, at 6pm. Space is limited; sign up in advance at Scheels. Learn new skills and try them out on the ice Saturday, February 13 from 12pm-2pm in front of The View in the Kids Klub area.
+            Holes will be drilled and lunch will be provided for the kids;<b> gear is NOT provided</b>. This event is FREE for kids up to age 12, prizes will be awarded for fish caught. Any fish caught in the Kid’s Club area will be marked and will not be eligible to register
+            in the Jig’s Up Blugold Ice Fishing Contest.
+          </blockquote>
+          <p>
+            <i>
+              The Wissota Lions Club will have food and beverages available on the ice. All state regulations and bag limits
+						  apply to this rule and no person may bring in more than the legal limit of fish allowed, which for this contest
+              includes, northern, walleye, panfish (perch, bluegills, crappies), and bass.<a href="http://dnr.wi.gov/topic/fishing/regulations/"> Click here to reference the Wisconsin DNR website. </a>
+            </i>
+          </p>
+          <br />
+          <!-- BREAK -->
+          <br />
+          <!-- BREAK -->
+          <div class="btn-center">
+            <a target="_blank" href="assets/rules.pdf"> <button class="btn1">Click here to see the rules</button></a>
+          </div>
+        </div>
+        <!-- #col-sm-6  -->
+        <div class="col-sm-6">
+          <br />
+          <!-- BREAK -->
+          <div class="videowrapper">
+          	<iframe width="560" height="315" src="https://www.youtube-nocookie.com/embed/xfDY-XQVjqE" frameborder="0" allowfullscreen></iframe>
+          </div>
+          <div class="sponsors">
+            <a href="http://www.gordyscountymarket.net" target="_blank">
+              <img class="indexTitleSponsor" src="images\sponsors\gordysLarge.png" alt="Gordy's County Market">
+            </a>
+            <a href="http://www.scheels.com" target="_blank">
+              <img class="indexTitleSponsor" src="images\sponsors\scheelsLarge.png" alt="Scheels">
+            </a>
+            <a href="http://www.geteskimo.com/" target="_blank">
+              <img class="indexSponsor" src="images\sponsors\eskimo.png" alt="Eskimo Ice Fishing Gear">
+            </a>
+            <a href="http://www.leinie.com" target="_blank">
+              <img class="indexSponsor" src="images\sponsors\lein.png" alt="Leinenkugel's"> </a>
+            <a href="http://www.stumpshotolives.com" target="_blank">
+              <img class="indexSponsor" src="images\sponsors\stumps.png" alt="Stump's Spicy Hot Food and Beverages">
+            </a>
+            <a href="http://www.prestigervauto.com/" target="_blank">
+              <img class="indexSponsor" src="images\sponsors\prestige.png" alt="Presitge Auto Corportation">
+            </a>
+            <a href="http://www.uwec.edu/dining/" target="_blank">
+              <img class="indexSponsor" src="images\sponsors\dining.png" alt="Blugold Dining by Sodexo">
+            </a>
+            <a href="http://www.pepsi.com/" target="_blank">
+              <img class="indexSponsor" src="images\sponsors\pepsi.png" alt="Pepsi">
+            </a>
+            <a href="http://www.eauclaireford.com/" target="_blank">
+              <img class="indexSponsor" src="images\sponsors\ford.png" alt="Ford">
+            </a>
+            <a href="http://www.theedgepubandeatery.com/" target="_blank">
+              <img class="indexSponsor" src="images\sponsors\edge.png" alt="Ford">
+            </a>
+            <a href="https://www.facebook.com/wissota.view.5" target="_blank">
+              <img class="indexSponsor" src="images\sponsors\view.png" alt="Ford">
+            </a>
+            <a href="http://www.gollonbait.com/" target="_blank">
+              <img class="indexSponsor" src="images\sponsors\gollon.png" alt="Ford">
+            </a>
+          </div>
+        </div>
+        <!-- #col-sm-6  -->
+      </div>
+      <!-- #row  -->
+    </div>
+    <!-- #container  -->
+    <br />
+    <!-- BREAK -->
+    <br />
+    <!-- BREAK -->
+    <br />
+    <!-- BREAK -->
+    <br />
+    <!-- BREAK -->
   </section>
 
   <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
