Post-Event Update

--- a/pastResults.html
+++ b/pastResults.html
@@ -146,6 +146,7 @@
           </a>
           <div id="collapse1" class="panel-collapse collapse ">
             <div class="panel-body">
+							<h2 class="headers">2015 Fish Prize Winners</h2>
               <div class="table-responsive">
                 <table class="table">
                   <thead>
@@ -816,6 +817,7 @@
           </a>
           <div id="collapse2" class="panel-collapse collapse">
             <div class="panel-body">
+							<h2 class="headers">2014 Fish Prize Winners</h2>
               <div class="table-responsive">
                 <table class="table">
                   <thead>
