update table rest of prizes
table of prizes

--- a/index.html
+++ b/index.html
@@ -598,6 +598,110 @@
 									<td>Perch</td>
 									<td>Eskimo QuickFlip 2</td>
 								</tr>
+								<tr>
+									<td>230</td>
+									<td>Hugh Lyberg</td>
+									<td></td>
+									<td></td>
+									<td>Scheel's Outfitters Rectangular Ice Combo Bag</td>
+								</tr>
+								<tr>
+									<td>235</td>
+									<td>Layla Peler</td>
+									<td></td>
+									<td></td>
+									<td>Eskimo Ice Auger</td>
+								</tr>
+								<tr>
+									<td>240</td>
+									<td>Jake Wiser</td>
+									<td></td>
+									<td></td>
+									<td>Rivers Edge Oasis 1-Man Ladder Stand</td>
+								</tr>
+								<tr>
+									<td>245</td>
+									<td>Brian Shaw</td>
+									<td></td>
+									<td></td>
+									<td>Frabill Straight Line 101 Ice Reel</td>
+								</tr>
+								<tr>
+									<td>250</td>
+									<td>Jake Center</td>
+									<td></td>
+									<td></td>
+									<td>Fatfish 949 Ice Shack</td>
+								</tr>
+								<tr>
+									<td>255</td>
+									<td>Josh Downs</td>
+									<td></td>
+									<td></td>
+									<td>Eskimo Ice Auger</td>
+								</tr>
+								<tr>
+									<td>260</td>
+									<td>Dan Webb</td>
+									<td></td>
+									<td></td>
+									<td>Pro Classic Ice Fishing Combo</td>
+								</tr>
+								<tr>
+									<td>265</td>
+									<td>John Zierden</td>
+									<td></td>
+									<td></td>
+									<td>Rivers Edge Oasis 1-Man Ladder Stand</td>
+								</tr>
+								<td>270</td>
+								<td>Dawn Gregorich</td>
+								<td></td>
+								<td></td>
+								<td>Eskimo Ice Auger</td>
+							</tr>
+							<tr>
+								<td>275</td>
+								<td>Craig Naedler</td>
+								<td></td>
+								<td></td>
+								<td>Eskimo QuickFip 1</td>
+							</tr>
+							<tr>
+								<td>280</td>
+								<td>Peter Daggett</td>
+								<td></td>
+								<td></td>
+								<td>Eskimo Hand Auger</td>
+							</tr>
+							<tr>
+								<td>285</td>
+								<td>Jacob Stephenson</td>
+								<td></td>
+								<td></td>
+								<td>Deep Freeze BlueTipz Tip Up Alarm System</td>
+							</tr>
+							<tr>
+								<td>290</td>
+								<td>Bruce Kyes</td>
+								<td></td>
+								<td></td>
+								<td>Mr.Heater Propane Buddy</td>
+							</tr>
+							<tr>
+								<td>295</td>
+								<td>Jeff Myher</td>
+								<td></td>
+								<td></td>
+								<td>Uncle Josh Original Beaver Dam Tip-Up</td>
+							</tr>
+							<tr>
+								<td>300</td>
+								<td>Mike Donaldson</td>
+								<td></td>
+								<td></td>
+								<td>$500</td>
+							</tr>
 							</tbody>
 						</table>
 					</div>
