--- a/index.html
+++ b/index.html
@@ -127,8 +127,11 @@
 			<br />
 			<br />
 		</div>
-		<div class="text-center">
+		<div class="container">
+			<div class="text-center">
 			<h2 class="headers">  Thank you anglers for coming out.  Blugold Recreation, UWEC Athletics, and the Lake Wissota Lions Club appreciates your support.  Please come again next year February 11th, 2017. </h2>
+		</div>
+	</div>
 		<div class="container">
 			<div class="row">
 				<div class="col-sm-12">
