--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@
 		</div>
 		<div class="container">
 			<div class="text-center">
-			<h2 class="headers">  Thank you anglers for coming out.  Blugold Recreation, UWEC Athletics, and the Lake Wissota Lions Club appreciates your support.  Please come again next year February 11th, 2017. </h2>
+			<h2 class="headers">  Thank you anglers for coming out.  Blugold Recreation, UWEC Athletics, and the Lake Wissota Lions Club appreciate your support.  We hope to see you back next year on February 11th, 2017. </h2>
 		</div>
 	</div>
 		<div class="container">
