Fix/Cleaned Up Code

--- a/index.html
+++ b/index.html
@@ -129,7 +129,8 @@
 		</div>
 		<div class="container">
 			<div class="text-center">
-			<h2 class="headers">  Thank you anglers for coming out.  Blugold Recreation, UWEC Athletics, and the Lake Wissota Lions Club appreciate your support.  We hope to see you back next year on February 11th, 2017. </h2>
+			<h2 class="headers">  Thank you anglers for coming out. Blugold Recreation, UWEC Athletics, and the Lake Wissota Lions Club appreciate your support.</h2>
+			<h2 class="headers"><u>Save the date: February 11th, 2017.</u></h2>
 		</div>
 	</div>
 		<div class="container">
@@ -787,7 +788,7 @@
 								<td>12</td>
 								<td>Jeremy Crowell</td>
 								<td>Eskimo Sinch bag + Beanie+Minnesota Vikings Signed photo + $25 Edge</td>
-								<td>Eskimo Ice fishing, The Minnesota Vikings & The Edge</td>
+								<td>Eskimo Ice fishing, The Minnesota Vikings &amp; The Edge</td>
 							</tr>
 							<tr>
 								<td>13</td>
@@ -924,7 +925,7 @@
 							<tr>
 								<td>35</td>
 								<td>Chris Sweeney</td>
-								<td>LCO Casino Lodge 1 night stay w/$20 Club Cash & $20 off any food purchase</td>
+								<td>LCO Casino Lodge 1 night stay w/$20 Club Cash &amp; $20 off any food purchase</td>
 								<td>LCO Casino </td>
 							</tr>
 							<tr>
@@ -974,11 +975,6 @@
 				</div>
 			</div>
 		</div>
-		<br />
-		<br />
-		<h1 class="headers text-center"><b>Save the date: February 11th, 2017</b></h1>
-		<br />
-		<br />
 		<br />
 		<br />
 		<br />
