--- a/schedule.html
+++ b/schedule.html
@@ -50,7 +50,7 @@
 				<button class="navbar-toggle" data-target="#bs-example-navbar-collapse-1" data-toggle="collapse" type="button">
 					<span class="menuTrigger" id="hamburger-one">
 							<span class="mainLine"></span>
-						</span>
+					</span>
 				</button>
 				<a class="navbar-brand" href="index.html">
 					<img alt="logo" src="images/logo.png" />
@@ -102,10 +102,10 @@
 						</a>
 					</li>
 					<li>
-            <a target="_blank" class="twitter" href="http://www.e-clubhouse.org/sites/lakewissota/">
-              <img alt="Lion's Club Logo" src="images/lclub.png" class="lclub" </img>
-            </a>
-          </li>
+						<a target="_blank" class="twitter" href="http://www.e-clubhouse.org/sites/lakewissota/">
+							<img alt="Lion's Club Logo" src="images/lclub.png" class="lclub" </img>
+						</a>
+					</li>
 				</ul>
 			</div>
 			<!-- /.navbar-collapse -->
@@ -115,128 +115,143 @@
 </head>
 
 <body>
-  <section id="content">
-    <div class="container">
-      <div class="row">
-        <div class="col-xs-6">
-          <br /> <!-- BREAK -->
-          <br /> <!-- BREAK -->
-          <br /> <!-- BREAK -->
-          <br /> <!-- BREAK -->
-          <h2 class="headers">Schedule</h2>
-        </div>
-        <!-- #col-sm-6 -->
-      </div>
-      <!-- #container -->
-      <div class="table-responsive">
-        <table class="table ">
-          <thead>
-            <tr>
+	<section id="content">
+		<div class="container">
+			<div class="row">
+				<div class="col-xs-6">
+					<br />
+					<!-- BREAK -->
+					<br />
+					<!-- BREAK -->
+					<br />
+					<!-- BREAK -->
+					<br />
+					<!-- BREAK -->
+					<h2 class="headers">Schedule</h2>
+				</div>
+				<!-- #col-sm-6 -->
+			</div>
+			<!-- #container -->
+			<div class="table-responsive">
+				<table class="table ">
+					<thead>
+						<tr>
 							<th> Location</th>
-              <th>Time</th>
-              <th>Event</th>
-            </tr>
-          </thead>
-          <tbody>
-            <tr>
+							<th>Time</th>
+							<th>Event</th>
+						</tr>
+					</thead>
+					<tbody>
+						<tr>
 							<td><b>Friday, February 12th</b></td>
-              <td></td>
-              <td></td>
-            </tr>
-            <tr>
+							<td></td>
+							<td></td>
+						</tr>
+						<tr>
 							<td>Scheels</td>
-              <td>6:00PM</td>
-              <td>Kids Klub ice fishing clinic at Scheels, sign up in advance at Scheels (Free)</td>
-            </tr>
-            <tr>
+							<td>6:00PM</td>
+							<td>Kids Klub ice fishing clinic at Scheels, sign up in advance at Scheels (Free)</td>
+						</tr>
+						<tr>
 							<td><b>Saturday, February 13th</b></td>
-              <td></td>
-              <td></td>
-            </tr>
-            <tr>
+							<td></td>
+							<td></td>
+						</tr>
+						<tr>
 							<td>Lake Wissota</td>
-              <td>7:00AM</td>
-              <td>Contest Begins! No need to pre-register, just head out to the ice and come in when you have a fish to register</td>
-            </tr>
-            <tr>
+							<td>7:00AM</td>
+							<td>Contest Begins! No need to pre-register, just head out to the ice and come in when you have a fish to register</td>
+						</tr>
+						<tr>
 							<td>The View</td>
-              <td>9:00AM</td>
-              <td>Last Chance to purchase additional Fish Tickets for $40</td>
-            </tr>
-            <tr>
+							<td>9:00AM</td>
+							<td>Last Chance to purchase additional Fish Tickets for $40</td>
+						</tr>
+						<tr>
 							<td>Lake Wissota</td>
-              <td>12:00PM</td>
-              <td>Kids Klub event on the ice in front of the View (Free lunch for kids)</td>
-            </tr>
-            <tr>
+							<td>12:00PM</td>
+							<td>Kids Klub event on the ice in front of the View (Free lunch for kids)</td>
+						</tr>
+						<tr>
 							<td>Gordy's Market at Lake Wissota &amp; The Edge Pub and Eatery</td>
-              <td>2:00PM</td>
-              <td>Weigh-in Stations close</td>
-            </tr>
-            <tr>
+							<td>2:00PM</td>
+							<td>Weigh-in Stations close</td>
+						</tr>
+						<tr>
 							<td>The View</td>
-              <td>3:00PM</td>
-              <td>Last Chance to purchase raffle tickets, winners announced and prizes distributed</td>
-            </tr>
-            <tr>
+							<td>3:00PM</td>
+							<td>Last Chance to purchase raffle tickets, winners announced and prizes distributed</td>
+						</tr>
+						<tr>
 							<td>The View</td>
-              <td>4:00PM</td>
-              <td>Fish contest winners announced and prizes distributed</td>
-            </tr>
-            <tr>
+							<td>4:00PM</td>
+							<td>Fish contest winners announced and prizes distributed</td>
+						</tr>
+						<tr>
 							<td>The View</td>
-              <td>5:00PM</td>
+							<td>5:00PM</td>
 							<td>Stick around for music and fish stories at the bar</td>
-            </tr>
-          </tbody>
-        </table>
-      </div>
-      <!-- #table-responsive -->
-      <br /> <!-- BREAK -->
-      <br /> <!-- BREAK -->
-      <br /> <!-- BREAK -->
-      <br /> <!-- BREAK -->
-  </section>
+						</tr>
+					</tbody>
+				</table>
+			</div>
+			<!-- #table-responsive -->
+			<br />
+			<!-- BREAK -->
+			<br />
+			<!-- BREAK -->
+			<br />
+			<!-- BREAK -->
+			<br />
+			<!-- BREAK -->
+	</section>
 
-  <div class="sponsorBar">
-    <a href="http://www.gordyscountymarket.net" target="_blank"><img class="sponsorBarImg" src="images\sponsors\gordysLarge.png" alt="Gordy's County Market"></a>
-    <a href="http://www.scheels.com" target="_blank"><img class="sponsorBarImg" src="images\sponsors\scheelsLarge.png" alt="Scheels"></a>
-    <a href="http://www.geteskimo.com/" target="_blank"><img class="sponsorBarImg" src="images\sponsors\eskimo.png" alt="Eskimo Ice Fishing Gear"></a>
-    <a href="http://www.leinie.com" target="_blank"><img class="sponsorBarImg" src="images\sponsors\lein.png" alt="Leinenkugel's"> </a>
-    <a href="http://www.stumpshotolives.com" target="_blank"><img class="sponsorBarImg" src="images\sponsors\stumps.png" alt="Stump's Spicy Hot Food and Beverages"></a>
-    <a href="http://www.prestigervauto.com/" target="_blank"><img class="sponsorBarImg" src="images\sponsors\prestige.png" alt="Presitge Auto Corportation"></a>
-    <a href="http://www.uwec.edu/dining/" target="_blank"><img class="sponsorBarImg" src="images\sponsors\dining.png" alt="Blugold Dining by Sodexo">
-    <a href="http://www.pepsi.com/" target="_blank"><img class="sponsorBarImg" src="images\sponsors\pepsi.png" alt="Pepsi"></a>
-    <a href="http://www.eauclaireford.com/" target="_blank"><img class="sponsorBarImg" src="images\sponsors\ford.png" alt="Ford"></a>
-    <a href="http://www.theedgepubandeatery.com/" target="_blank"><img class="sponsorBarImg" src="images\sponsors\edge.png" alt="Ford"></a>
-    <a href="https://www.facebook.com/wissota.view.5" target="_blank"><img class="sponsorBarImg" src="images\sponsors\view.png" alt="Ford"></a>
-    <a href="http://www.gollonbait.com/" target="_blank"><img class="sponsorBarImg" src="images\sponsors\gollon.png" alt="Gollon Brothers"></a>
-  </div>
-  <br /> <!-- BREAK -->
-  <br /> <!-- BREAK -->
+	<div class="sponsorBar">
+		<a href="http://www.gordyscountymarket.net" target="_blank"><img class="sponsorBarImg" src="images\sponsors\gordysLarge.png" alt="Gordy's County Market"></a>
+		<a href="http://www.scheels.com" target="_blank"><img class="sponsorBarImg" src="images\sponsors\scheelsLarge.png" alt="Scheels"></a>
+		<a href="http://www.geteskimo.com/" target="_blank"><img class="sponsorBarImg" src="images\sponsors\eskimo.png" alt="Eskimo Ice Fishing Gear"></a>
+		<a href="http://www.leinie.com" target="_blank"><img class="sponsorBarImg" src="images\sponsors\lein.png" alt="Leinenkugel's"> </a>
+		<a href="http://www.stumpshotolives.com" target="_blank"><img class="sponsorBarImg" src="images\sponsors\stumps.png" alt="Stump's Spicy Hot Food and Beverages"></a>
+		<a href="http://www.prestigervauto.com/" target="_blank"><img class="sponsorBarImg" src="images\sponsors\prestige.png" alt="Presitge Auto Corportation"></a>
+		<a href="http://www.uwec.edu/dining/" target="_blank"><img class="sponsorBarImg" src="images\sponsors\dining.png" alt="Blugold Dining by Sodexo">
+			<a href="http://www.pepsi.com/" target="_blank"><img class="sponsorBarImg" src="images\sponsors\pepsi.png" alt="Pepsi"></a>
+			<a href="http://www.eauclaireford.com/" target="_blank"><img class="sponsorBarImg" src="images\sponsors\ford.png" alt="Ford"></a>
+			<a href="http://www.theedgepubandeatery.com/" target="_blank"><img class="sponsorBarImg" src="images\sponsors\edge.png" alt="Ford"></a>
+			<a href="https://www.facebook.com/wissota.view.5" target="_blank"><img class="sponsorBarImg" src="images\sponsors\view.png" alt="Ford"></a>
+			<a href="http://www.gollonbait.com/" target="_blank"><img class="sponsorBarImg" src="images\sponsors\gollon.png" alt="Gollon Brothers"></a>
+	</div>
+	<br />
+	<!-- BREAK -->
+	<br />
+	<!-- BREAK -->
 
-  <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
-  <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
-  <!-- Include all compiled plugins (below), or include individual files as needed -->
-  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/js/bootstrap.min.js"></script>
-  <script src="js/lib/jquery-1.9.1.min.js" type="text/javascript"></script>
-  <script src="js/main.js" type="text/javascript"></script>
+	<!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
+	<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
+	<!-- Include all compiled plugins (below), or include individual files as needed -->
+	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/js/bootstrap.min.js"></script>
+	<script src="js/lib/jquery-1.9.1.min.js" type="text/javascript"></script>
+	<script src="js/main.js" type="text/javascript"></script>
 </body>
 
 <footer>
-  <div class="footer hidden-xs">
-    <br /> <!-- BREAK -->
-    <p>
-      Recreation | Hilltop 105 | Eau Claire, WI 54702 | 715-836-3377 | <a href="mailto:recreation@uwec.edu">recreation@uwec.edu</a>
-      <br /> <!-- BREAK -->
-    </p>
-  </div>
-  <div class="footer visible-xs">
-    <br /> <!-- BREAK -->
-    <p class="small-footer">
-      Recreation | Hilltop 105 | Eau Claire, WI 54702 | 715-836-3377 | <a href="mailto:recreation@uwec.edu">recreation@uwec.edu</a>
-      <br /> <!-- BREAK -->
-    </p>
-  </div>
+	<div class="footer hidden-xs">
+		<br />
+		<!-- BREAK -->
+		<p>
+			Recreation | Hilltop 105 | Eau Claire, WI 54702 | 715-836-3377 | <a href="mailto:recreation@uwec.edu">recreation@uwec.edu</a>
+			<br />
+			<!-- BREAK -->
+		</p>
+	</div>
+	<div class="footer visible-xs">
+		<br />
+		<!-- BREAK -->
+		<p class="small-footer">
+			Recreation | Hilltop 105 | Eau Claire, WI 54702 | 715-836-3377 | <a href="mailto:recreation@uwec.edu">recreation@uwec.edu</a>
+			<br />
+			<!-- BREAK -->
+		</p>
+	</div>
 </footer>
+
 </html>
