--- a/tickets.html
+++ b/tickets.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -49,7 +50,7 @@
 				<button class="navbar-toggle" data-target="#bs-example-navbar-collapse-1" data-toggle="collapse" type="button">
 					<span class="menuTrigger" id="hamburger-one">
 							<span class="mainLine"></span>
-						</span>
+					</span>
 				</button>
 				<a class="navbar-brand" href="index.html">
 					<img alt="logo" src="images/logo.png" />
@@ -101,10 +102,10 @@
 						</a>
 					</li>
 					<li>
-            <a target="_blank" class="twitter" href="http://www.e-clubhouse.org/sites/lakewissota/">
-              <img alt="Lion's Club Logo" src="images/lclub.png" class="lclub" </img>
-            </a>
-          </li>
+						<a target="_blank" class="twitter" href="http://www.e-clubhouse.org/sites/lakewissota/">
+							<img alt="Lion's Club Logo" src="images/lclub.png" class="lclub" </img>
+						</a>
+					</li>
 				</ul>
 			</div>
 			<!-- /.navbar-collapse -->
@@ -114,68 +115,82 @@
 </head>
 
 <body>
-	<br /> <!-- BREAK -->
-	<br /> <!-- BREAK -->
-	<br /> <!-- BREAK -->
-	<br /> <!-- BREAK -->
+	<br />
+	<!-- BREAK -->
+	<br />
+	<!-- BREAK -->
+	<br />
+	<!-- BREAK -->
+	<br />
+	<!-- BREAK -->
 	<section id="content">
 		<div class="container">
-		<h2 class="headers">Register Here!</h2>
-    <br />
-    <a href="http://www.eventbrite.com/e/jigs-up-blugold-ice-fishing-contest-on-lake-wissota-tickets-18941716183?ref=ebtnebtckt" target="_blank"><img src="https://www.eventbrite.com/custombutton?eid=18941716183" alt="Eventbrite - Jig&#39;s Up Blugold Ice Fishing Contest on Lake Wissota" /></a>
-		<br />
-    <br />
-		<h4 class="headers">Fish Tickets:</h4>
-		<h4>$25, one ticket required for each fish registered </h4>
-		<blockquote>
-			Over $80,000 in cash and prizes including a 2015 Ice Castle Scout. Prizes awarded to the top 25 fish by weight and every 5th place thereafter to the 300th place so even a small fish can win big! All prizes will be distributed at the event, regardless
-			of the number of fish registered so hold on to your Fish Tickets.
-		</blockquote>
+			<h2 class="headers">Register Here!</h2>
+			<br />
+			<a href="http://www.eventbrite.com/e/jigs-up-blugold-ice-fishing-contest-on-lake-wissota-tickets-18941716183?ref=ebtnebtckt" target="_blank"><img src="https://www.eventbrite.com/custombutton?eid=18941716183" alt="Eventbrite - Jig&#39;s Up Blugold Ice Fishing Contest on Lake Wissota" /></a>
+			<br />
+			<br />
+			<h4 class="headers">Fish Tickets:</h4>
+			<h4>$25, one ticket required for each fish registered </h4>
+			<blockquote>
+				Over $80,000 in cash and prizes including a 2015 Ice Castle Scout. Prizes awarded to the top 25 fish by weight and every 5th place thereafter to the 300th place so even a small fish can win big! All prizes will be distributed at the event, regardless
+				of the number of fish registered so hold on to your Fish Tickets.
+			</blockquote>
 
-		<h4 class="headers">Fish Ticket Availability:</h4>
-		<h4>Tickets available online until 11:59pm on Friday, February 12th. Fish tickets will be available on February 13th at the Weigh-in Stations and The View until 9am for $40. </h4>
-		<blockquote>
-			Fish tickets purchased online will be mailed through February 4th to the address indicated. After February 4th, tickets will be available for pick-up at the weigh-in station at Gordy's Market on Lake
-      Wissota starting at 6:30AM Saturday, February 13th. NOTE: You do not need to pick up your fish tickets until you are ready to weigh-in a fish.
+			<h4 class="headers">Fish Ticket Availability:</h4>
+			<h4>Tickets available online until 11:59pm on Friday, February 12th. Fish tickets will be available on February 13th at the Weigh-in Stations and The View until 9am for $40. </h4>
+			<blockquote>
+				Fish tickets purchased online will be mailed through February 4th to the address indicated. After February 4th, tickets will be available for pick-up at the weigh-in station at Gordy's Market on Lake Wissota starting at 6:30AM Saturday, February 13th.
+				NOTE: You do not need to pick up your fish tickets until you are ready to weigh-in a fish.
 
-		</blockquote>
+			</blockquote>
 
-    <h4 class="headers">Raffle Tickets:</h4>
-		<h4>$5 each or 5 for $20</h4>
-		<blockquote>
-			$7,500 in prizes includes a 2015 Polaris Sportsman 4-wheeler, $500 Scheels Gift Card, Vexilar FL-20 Genz Pack Locater System, Benelli Nova Pump Sheild Shotgun, Men's Adams Golf Speedline Club Set
+			<h4 class="headers">Raffle Tickets:</h4>
+			<h4>$5 each or 5 for $20</h4>
+			<blockquote>
+				$7,500 in prizes includes a 2015 Polaris Sportsman 4-wheeler, $500 Scheels Gift Card, Vexilar FL-20 Genz Pack Locater System, Benelli Nova Pump Sheild Shotgun, Men's Adams Golf Speedline Club Set
 
-      <br />
-      <br />
-      Raffle tickets purchased online will have the stubs completed by contest administrators and entered into the drawing. Claim tickets will be mailed through February 4th to the address indicated
-      After February 4th, claim tickets will be available for pick-up at The View on Lake Wissota starting at 6:30AM Saturday, February 13th. NOTE: Raffle drawing begins at 3:00 PM at The View. Please
-      pick up your claim tickets by 2:00 PM, claim tickets not picked up will be brought to The View after 2:00PM.
-		</blockquote>
+				<br />
+				<br /> Raffle tickets purchased online will have the stubs completed by contest administrators and entered into the drawing. Claim tickets will be mailed through February 4th to the address indicated After February 4th, claim tickets will be available for
+				pick-up at The View on Lake Wissota starting at 6:30AM Saturday, February 13th. NOTE: Raffle drawing begins at 3:00 PM at The View. Please pick up your claim tickets by 2:00 PM, claim tickets not picked up will be brought to The View after 2:00PM.
+			</blockquote>
 
 
-		<a target="_blank" href="assets\rules.pdf" <button class="btn1">Click here to see the rules</button></a>
-		<br /> <!-- BREAK -->
-		<br /> <!-- BREAK -->
-		<div>
-			<h3 class="headers">Tickets can also be purchased at: </h3>
-			<ul class="list">
-				<li>Scheels</li>
-				<li>The View at Lake Wissota</li>
-				<li>The Edge Pub &amp; Eatery on Lake Wissota</li>
-				<li>Gordy’s Market select locations*</li>
-				<li>UWEC McPhee Information Office, 8:00am-4:30pm, Monday - Friday</h3></li>
-				<li>UWEC Hilltop Recreation Center Office, 8:00am-4:30pm, Monday - Friday</h3></li>
-			</ul>
-			*Gordy’s Market Store Locations:  Lake Wissota, Downtown Chippewa Falls, Chippewa Commons, Birch Street (EC), Hamilton (EC), Clairemont (EC), Rice Lake, Ladysmith, Cornell, Chetek, Augusta
-			<br /> <!-- BREAK -->
-			<br /> <!-- BREAK -->
-			<br /> <!-- BREAK -->
-			<br /> <!-- BREAK -->
-			<br /> <!-- BREAK -->
-			<br /> <!-- BREAK -->
-			<br /> <!-- BREAK -->
-			<br /> <!-- BREAK -->
-		</div>
+			<a target="_blank" href="assets\rules.pdf" <button class="btn1">Click here to see the rules</button></a>
+			<br />
+			<!-- BREAK -->
+			<br />
+			<!-- BREAK -->
+			<div>
+				<h3 class="headers">Tickets can also be purchased at: </h3>
+				<ul class="list">
+					<li>Scheels</li>
+					<li>The View at Lake Wissota</li>
+					<li>The Edge Pub &amp; Eatery on Lake Wissota</li>
+					<li>Gordy’s Market select locations*</li>
+					<li>UWEC McPhee Information Office, 8:00am-4:30pm, Monday - Friday</h3>
+					</li>
+					<li>UWEC Hilltop Recreation Center Office, 8:00am-4:30pm, Monday - Friday</h3>
+					</li>
+				</ul>
+				*Gordy’s Market Store Locations:  Lake Wissota, Downtown Chippewa Falls, Chippewa Commons, Birch Street (EC), Hamilton (EC), Clairemont (EC), Rice Lake, Ladysmith, Cornell, Chetek, Augusta
+				<br />
+				<!-- BREAK -->
+				<br />
+				<!-- BREAK -->
+				<br />
+				<!-- BREAK -->
+				<br />
+				<!-- BREAK -->
+				<br />
+				<!-- BREAK -->
+				<br />
+				<!-- BREAK -->
+				<br />
+				<!-- BREAK -->
+				<br />
+				<!-- BREAK -->
+			</div>
 	</section>
 
 	<div class="sponsorBar">
@@ -186,37 +201,44 @@
 		<a href="http://www.stumpshotolives.com" target="_blank"><img class="sponsorBarImg" src="images\sponsors\stumps.png" alt="Stump's Spicy Hot Food and Beverages"></a>
 		<a href="http://www.prestigervauto.com/" target="_blank"><img class="sponsorBarImg" src="images\sponsors\prestige.png" alt="Presitge Auto Corportation"></a>
 		<a href="http://www.uwec.edu/dining/" target="_blank"><img class="sponsorBarImg" src="images\sponsors\dining.png" alt="Blugold Dining by Sodexo">
-		<a href="http://www.pepsi.com/" target="_blank"><img class="sponsorBarImg" src="images\sponsors\pepsi.png" alt="Pepsi"></a>
-		<a href="http://www.eauclaireford.com/" target="_blank"><img class="sponsorBarImg" src="images\sponsors\ford.png" alt="Ford"></a>
-		<a href="http://www.theedgepubandeatery.com/" target="_blank"><img class="sponsorBarImg" src="images\sponsors\edge.png" alt="Ford"></a>
-		<a href="https://www.facebook.com/wissota.view.5" target="_blank"><img class="sponsorBarImg" src="images\sponsors\view.png" alt="Ford"></a>
-    <a href="http://www.gollonbait.com/" target="_blank"><img class="sponsorBarImg" src="images\sponsors\gollon.png" alt="Gollon Brothers"></a>
+			<a href="http://www.pepsi.com/" target="_blank"><img class="sponsorBarImg" src="images\sponsors\pepsi.png" alt="Pepsi"></a>
+			<a href="http://www.eauclaireford.com/" target="_blank"><img class="sponsorBarImg" src="images\sponsors\ford.png" alt="Ford"></a>
+			<a href="http://www.theedgepubandeatery.com/" target="_blank"><img class="sponsorBarImg" src="images\sponsors\edge.png" alt="Ford"></a>
+			<a href="https://www.facebook.com/wissota.view.5" target="_blank"><img class="sponsorBarImg" src="images\sponsors\view.png" alt="Ford"></a>
+			<a href="http://www.gollonbait.com/" target="_blank"><img class="sponsorBarImg" src="images\sponsors\gollon.png" alt="Gollon Brothers"></a>
 	</div>
-	<br /> <!-- BREAK -->
-	<br /> <!-- BREAK -->
+	<br />
+	<!-- BREAK -->
+	<br />
+	<!-- BREAK -->
 
-    <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
-    <!-- Include all compiled plugins (below), or include individual files as needed -->
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/js/bootstrap.min.js"></script>
-    <script src="js/lib/jquery-1.9.1.min.js" type="text/javascript"></script>
-    <script src="js/main.js" type="text/javascript"></script>
+	<!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
+	<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
+	<!-- Include all compiled plugins (below), or include individual files as needed -->
+	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/js/bootstrap.min.js"></script>
+	<script src="js/lib/jquery-1.9.1.min.js" type="text/javascript"></script>
+	<script src="js/main.js" type="text/javascript"></script>
 </body>
 
 <footer>
-   <div class="footer hidden-xs">
-     <br /> <!-- BREAK -->
-     <p>
-       Recreation | Hilltop 105 | Eau Claire, WI 54702 | 715-836-3377 | <a href="mailto:recreation@uwec.edu">recreation@uwec.edu</a>
-       <br /> <!-- BREAK -->
-     </p>
-   </div>
-   <div class="footer visible-xs">
-     <br /> <!-- BREAK -->
-     <p class="small-footer">
-       Recreation | Hilltop 105 | Eau Claire, WI 54702 | 715-836-3377 | <a href="mailto:recreation@uwec.edu">recreation@uwec.edu</a>
-       <br /> <!-- BREAK -->
-     </p>
-   </div>
+	<div class="footer hidden-xs">
+		<br />
+		<!-- BREAK -->
+		<p>
+			Recreation | Hilltop 105 | Eau Claire, WI 54702 | 715-836-3377 | <a href="mailto:recreation@uwec.edu">recreation@uwec.edu</a>
+			<br />
+			<!-- BREAK -->
+		</p>
+	</div>
+	<div class="footer visible-xs">
+		<br />
+		<!-- BREAK -->
+		<p class="small-footer">
+			Recreation | Hilltop 105 | Eau Claire, WI 54702 | 715-836-3377 | <a href="mailto:recreation@uwec.edu">recreation@uwec.edu</a>
+			<br />
+			<!-- BREAK -->
+		</p>
+	</div>
 </footer>
+
 </html>
