--- a/schedule.html
+++ b/schedule.html
@@ -136,14 +136,14 @@
 				<table class="table ">
 					<thead>
 						<tr>
-							<th> Location</th>
+							<th>Location</th>
 							<th>Time</th>
 							<th>Event</th>
 						</tr>
 					</thead>
 					<tbody>
 						<tr>
-							<td><b>Friday, February 12th</b></td>
+							<td><b>Friday, February 11th</b></td>
 							<td></td>
 							<td></td>
 						</tr>
@@ -153,14 +153,14 @@
 							<td>Kids Klub ice fishing clinic at Scheels, sign up in advance at Scheels (Free)</td>
 						</tr>
 						<tr>
-							<td><b>Saturday, February 13th</b></td>
+							<td><b>Saturday, February 12th</b></td>
 							<td></td>
 							<td></td>
 						</tr>
 						<tr>
 							<td>Lake Wissota</td>
 							<td>7:00AM</td>
-							<td>Contest Begins! No need to pre-register, just head out to the ice and come in when you have a fish to register</td>
+							<td>Contest Begins! No need to pre-register, just head out to the ice. </td>
 						</tr>
 						<tr>
 							<td>The View</td>
@@ -175,7 +175,7 @@
 						<tr>
 							<td>Gordy's Market at Lake Wissota &amp; The Edge Pub and Eatery</td>
 							<td>2:00PM</td>
-							<td>Weigh-in Stations close</td>
+							<td>Weigh-in Stations close, must be in line at 2:00PM to register your fish</td>
 						</tr>
 						<tr>
 							<td>The View</td>
