--- a/tickets.html
+++ b/tickets.html
@@ -131,28 +131,28 @@
 			<br />
 			<br />
 			<h4 class="headers">Fish Tickets:</h4>
-			<h4>$25, one ticket required for each fish registered </h4>
+			<h4>$25, one ticket required for each fish registered, mutiple tickets may be purchased </h4>
 			<blockquote>
 				Over $80,000 in cash and prizes including a 2015 Ice Castle Scout. Prizes awarded to the top 25 fish by weight and every 5th place thereafter to the 300th place so even a small fish can win big! All prizes will be distributed at the event, regardless
-				of the number of fish registered so hold on to your Fish Tickets.
+				of the number of fish registered.
 			</blockquote>
 
 			<h4 class="headers">Fish Ticket Availability:</h4>
-			<h4>Tickets available online until 11:59pm on Friday, February 12th. Fish tickets will be available on February 13th at the Weigh-in Stations and The View until 9am for $40. </h4>
+			<h4>Tickets available online until 10:00pm on Friday, February 10th. Fish tickets will be available on February 11th at the Weigh-in Stations and The View until 9am for $40. </h4>
 			<blockquote>
-				Fish tickets purchased online will be mailed through February 4th to the address indicated. After February 4th, tickets will be available for pick-up at the weigh-in station at Gordy's Market on Lake Wissota starting at 6:30AM Saturday, February 13th.
+				Fish tickets purchased online will be mailed through February 3rd to the address indicated. After February 3rd, tickets will be available for pick-up at the weigh-in station at Gordy's Market on Lake Wissota starting at 6:30AM Saturday, February 13th.
 				NOTE: You do not need to pick up your fish tickets until you are ready to weigh-in a fish.
 
 			</blockquote>
 
 			<h4 class="headers">Raffle Tickets:</h4>
-			<h4>$5 each or 5 for $20</h4>
+			<h4><b>$5 each or 5 for $20</b></h4>
 			<blockquote>
-				$7,500 in prizes includes a 2015 Polaris Sportsman 4-wheeler, $500 Scheels Gift Card, Vexilar FL-20 Genz Pack Locater System, Benelli Nova Pump Sheild Shotgun, Men's Adams Golf Speedline Club Set
+				$7,500 in prizes includes a 2015 Polaris Sportsman 4-wheeler, $500 Scheels Gift Card, Vexilar FL-20 Genz Pack Locater System, Benelli Nova Pump Sheild Shotgun, Men's Adams Golf Speedline Club Set.  Tickets can be purchased up until 2:30 PM on Saturday, February 11th at The View and the weigh-in stations.
 
 				<br />
-				<br /> Raffle tickets purchased online will have the stubs completed by contest administrators and entered into the drawing. Claim tickets will be mailed through February 4th to the address indicated After February 4th, claim tickets will be available for
-				pick-up at The View on Lake Wissota starting at 6:30AM Saturday, February 13th. NOTE: Raffle drawing begins at 3:00 PM at The View. Please pick up your claim tickets by 2:00 PM, claim tickets not picked up will be brought to The View after 2:00PM.
+				<br /> Raffle tickets purchased online will have the stubs completed by contest administrators and entered into the drawing. Claim tickets will be mailed through February 3rd to the address indicated.  After February 3rd, claim tickets will be available for
+				pick-up at The View on Lake Wissota. NOTE: Raffle drawing begins at 3:00 PM at The View. Please pick up claim tickets by 2:00 PM. 
 			</blockquote>
 
 
