updates to Tickets page
tickets page updates

--- a/tickets.html
+++ b/tickets.html
@@ -152,7 +152,7 @@
 
 				<br />
 				<br /> Raffle tickets purchased online will have the stubs completed by contest administrators and entered into the drawing. Claim tickets will be mailed through February 3rd to the address indicated.  After February 3rd, claim tickets will be available for
-				pick-up at The View on Lake Wissota. NOTE: Raffle drawing begins at 3:00 PM at The View. Please pick up claim tickets by 2:00 PM. 
+				pick-up at The View on Lake Wissota. NOTE: Raffle drawing begins at 3:00 PM at The View. Please pick up claim tickets by 2:00 PM.
 			</blockquote>
 
 
@@ -164,16 +164,16 @@
 			<div>
 				<h3 class="headers">Tickets can also be purchased at: </h3>
 				<ul class="list">
-					<li>Scheels</li>
+					<li>Scheels until 9pm Friday, February 10th</li>
 					<li>The View at Lake Wissota</li>
 					<li>The Edge Pub &amp; Eatery on Lake Wissota</li>
-					<li>Gordy’s Market select locations*</li>
+					<li>Gordy’s Market select locations* until 10pm Friday, February 10th</li>
 					<li>UWEC McPhee Information Office, 8:00am-4:30pm, Monday - Friday</h3>
 					</li>
 					<li>UWEC Hilltop Recreation Center Office, 8:00am-4:30pm, Monday - Friday</h3>
 					</li>
 				</ul>
-				*Gordy’s Market Store Locations:  Lake Wissota, Downtown Chippewa Falls, Chippewa Commons, Birch Street (EC), Hamilton (EC), Clairemont (EC), Rice Lake, Ladysmith, Cornell, Chetek, Augusta
+				*Gordy’s Market Store Locations:  Lake Wissota, Downtown Chippewa Falls, Chippewa Commons, Birch Street (EC), Hamilton (EC), Clairemont (EC), Rice Lake, Ladysmith, Cornell, Chetek
 				<br />
 				<!-- BREAK -->
 				<br />
