added subway logo to title sponsors

--- a/sponsors.html
+++ b/sponsors.html
@@ -133,8 +133,14 @@
 				<div class="col-lg-6 col-xs-12 thumb center">
 					<a href="http://www.scheels.com" target="_blank"><img class="img-responsive center" src="images\sponsors\scheelsLarge.png" alt="Scheels"></a>
 				</div>
+
+				<div class="col-lg-6 col-xs-12 thumb center">
+					<a href="http://www.subway.com/subwayroot/default.aspx" target="_blank"><img class="img-responsive center" src="images\sponsors\Subway.png" alt="Subway"></a>
+				</div>
+			</div>
 				<!-- #col-lg-3 col-md-4 col-xs-6 thumb -->
-				<br />
+			</br>
+
 				<!-- BREAK -->
 				<div class="text-center">
 					<h2 class="headers"><b>Sponsors</b></h2>
