--- a/contact.html
+++ b/contact.html
@@ -263,6 +263,8 @@
   <!-- #contactForm  -->
 
   <div class="sponsorBar">
+		<a href="http://www.subway.com/subwayroot/default.aspx" target="_blank">
+			<img class="sponsorBarImg" src="images\sponsors\Subway.png" alt="Subway"></a>
     <a href="http://www.gordyscountymarket.net" target="_blank">
       <img class="sponsorBarImg" src="images\sponsors\gordysLarge.png" alt="Gordy's County Market">
     </a>
