--- a/contact.html
+++ b/contact.html
@@ -178,11 +178,11 @@
                   <tbody>
                     <tr>
                       <td>Shari Breed</td>
-                      <td>Blugold Recreation</td>
+                      <td>UWEC Recreation and Sport Facilities</td>
                     </tr>
                     <tr>
                       <td>Tammy Brunschmid</td>
-                      <td>Blugold Recreation</td>
+                      <td>UWEC Recreation and Sport Facilities</td>
                     </tr>
                     <tr>
                       <td>Maggie Cook</td>
@@ -198,7 +198,7 @@
                     </tr>
                     <tr>
                       <td>Andy Jepsen</td>
-                      <td>Blugold Recreation</td>
+                      <td>UWEC Recreation and Sport Facilities</td>
                     </tr>
                     <tr>
                       <td>Jamie Kane</td>
@@ -214,7 +214,7 @@
                     </tr>
                     <tr>
                       <td>Sheryl Poirier</td>
-                      <td>Blugold Recreation</td>
+                      <td>UWEC Recreation and Sport Facilities</td>
                     </tr>
                     <tr>
                       <td>Dave Prescher</td>
@@ -230,11 +230,11 @@
                     </tr>
                     <tr>
                       <td>Jan Thorsen</td>
-                      <td>Blugold Recreation</td>
+                      <td>UWEC Recreation and Sport Facilities</td>
                     </tr>
                     <tr>
                       <td>Al Wiberg</td>
-                      <td>Blugold Recreation</td>
+                      <td>UWEC Recreation and Sport Facilities</td>
                     </tr>
                   </tbody>
                 </table>
