--- a/schedule.html
+++ b/schedule.html
@@ -135,6 +135,7 @@
 			<div class="table-responsive">
 				<table class="table ">
 					<thead>
+						<!-- make these bold or the titles for the table of the schedule-->
 						<tr>
 							<th>Location</th>
 							<th>Time</th>
@@ -143,7 +144,7 @@
 					</thead>
 					<tbody>
 						<tr>
-							<td><b>Friday, February 11th</b></td>
+							<td><b>Friday, February 10th</b></td>
 							<td></td>
 							<td></td>
 						</tr>
@@ -153,7 +154,7 @@
 							<td>Kids Klub ice fishing clinic at Scheels, sign up in advance at Scheels (Free)</td>
 						</tr>
 						<tr>
-							<td><b>Saturday, February 12th</b></td>
+							<td><b>Saturday, February 11th</b></td>
 							<td></td>
 							<td></td>
 						</tr>
@@ -173,7 +174,7 @@
 							<td>Kids Klub event on the ice in front of the View (Free lunch for kids)</td>
 						</tr>
 						<tr>
-							<td>Gordy's Market at Lake Wissota &amp; The Edge Pub and Eatery</td>
+							<td>The View &amp; The Edge Pub and Eatery</td>
 							<td>2:00PM</td>
 							<td>Weigh-in Stations close, must be in line at 2:00PM to register your fish</td>
 						</tr>
