--- a/tickets.html
+++ b/tickets.html
@@ -138,9 +138,9 @@
 			</blockquote>
 
 			<h4 class="headers">Fish Ticket Availability:</h4>
-			<h4>Tickets available online until 10:00pm on Friday, February 10th. Fish tickets will be available on February 11th at the Weigh-in Stations and The View until 9am for $40. </h4>
+			<h4>Tickets available online until 10:00pm on Friday, February 10th. Fish tickets will be available on February 11th, 2017: at the Weigh-in Stations and The View until 9am for $40. </h4>
 			<blockquote>
-				Fish tickets purchased online will be mailed through February 3rd to the address indicated. After February 3rd, tickets will be available for pick-up at the weigh-in station at Gordy's Market on Lake Wissota starting at 6:30AM Saturday, February 13th.
+				Fish tickets purchased online will be mailed through February 2nd to the address indicated. After February 2nd, tickets will be available for pick-up at the weigh-in station in The View.
 				NOTE: You do not need to pick up your fish tickets until you are ready to weigh-in a fish.
 
 			</blockquote>
@@ -148,7 +148,7 @@
 			<h4 class="headers">Raffle Tickets:</h4>
 			<h4><b>$5 each or 5 for $20</b></h4>
 			<blockquote>
-				$7,500 in prizes includes a 2015 Polaris Sportsman 4-wheeler, $500 Scheels Gift Card, Vexilar FL-20 Genz Pack Locater System, Benelli Nova Pump Sheild Shotgun, Men's Adams Golf Speedline Club Set.  Tickets can be purchased up until 2:30 PM on Saturday, February 11th at The View and the weigh-in stations.
+				$7,500 in prizes includes a 2016 Polaris Sportsman 4-wheeler, $500 Scheels Gift Card, Vexilar FL-20 Genz Pack Locater System, Benelli Nova Pump Sheild Shotgun, Men's Adams Golf Speedline Club Set.  Tickets can be purchased up until 2:30 PM on Saturday, February 11th at The View and the weigh-in stations.
 
 				<br />
 				<br /> Raffle tickets purchased online will have the stubs completed by contest administrators and entered into the drawing. Claim tickets will be mailed through February 3rd to the address indicated.  After February 3rd, claim tickets will be available for
