--- a/indexBEFORE.html
+++ b/indexBEFORE.html
@@ -149,7 +149,7 @@
     <div class="text-center">
       </br>
       <!-- BREAK -->
-      <h1 class="headers"><b>3rd Annual Jig's Up Blugold Ice Fishing Contest</b></h1>
+      <h1 class="headers"><b>4th Annual Jig's Up Blugold Ice Fishing Contest</b></h1>
       <h5 class="headers">Presented by Blugold Recreation, UWEC Athletics, and the Lake Wissota Lions Club</h5>
       <img alt="Sponsors Logo" src="images/3logo.png" </img>
       <div class="horizbar">
@@ -168,19 +168,19 @@
 					<p><h3 class="headers"><b>CHECK BACK MONDAY FOR FULL RESULTS</b></h3></p>
 
           <h3 class="headers"><b>When:</b></h3>
-          <h3>Saturday, February 13, 2016; 7am-2pm</h3>
+          <h3>Saturday, February 11th, 2017; 7am-2pm</h3>
           <br />
           <!-- BREAK -->
           <br />
           <!-- BREAK -->
           <blockquote>
 						Tickets will be available for pick-up at the weigh-in station at Gordy's Market on Lake
-			      Wissota starting at 6:30AM Saturday, February 13th.
+			      Wissota starting at 6:30AM Saturday, February 11th.
           </blockquote>
           <h3 class="headers"><b>Where:</b></h3>
           <h3> Lake Wissota</h3>
           <blockquote>
-            <b>Weigh-In Stations:</b> The Edge Pub &amp; Eatery and Gordy's Market on "Little Lake Wissota"
+            <b>Weigh-In Stations:</b> The Edge Pub &amp; The View
             <br />
             <!-- BREAK -->
             <b>Prize Distribution:</b> The View on Lake Wissota, 3pm Raffle Prizes, Fish Prizes to be drawn right after
@@ -190,7 +190,7 @@
           <h3> <a target="_blank" href="assets\kidsevent.pdf">Scheels Kids Ice Fishing Clinic</a></h3>
 
           <blockquote>
-            Scheels will host a Kids Klub ice fishing clinic at their store on Friday, February 12, at 6pm. Space is limited; sign up in advance at Scheels. Learn new skills and try them out on the ice Saturday, February 13 from 12pm-2pm in front of The View in the Kids Klub area.
+            Scheels will host a Kids Klub ice fishing clinic at their store on Friday, February 10th, at 6pm. Space is limited; sign up in advance at Scheels. Learn new skills and try them out on the ice Saturday, February 11th from 12pm-2pm in front of The View in the Kids Klub area.
             Holes will be drilled and lunch will be provided for the kids;<b> gear is NOT provided</b>. This event is FREE for kids up to age 12, prizes will be awarded for fish caught. Any fish caught in the Kid’s Club area will be marked and will not be eligible to register
             in the Jig’s Up Blugold Ice Fishing Contest.
           </blockquote>
@@ -228,17 +228,11 @@
             </a>
             <a href="http://www.leinie.com" target="_blank">
               <img class="indexSponsor" src="images\sponsors\lein.png" alt="Leinenkugel's"> </a>
-            <a href="http://www.stumpshotolives.com" target="_blank">
-              <img class="indexSponsor" src="images\sponsors\stumps.png" alt="Stump's Spicy Hot Food and Beverages">
-            </a>
             <a href="http://www.prestigervauto.com/" target="_blank">
               <img class="indexSponsor" src="images\sponsors\prestige.png" alt="Presitge Auto Corportation">
             </a>
             <a href="http://www.uwec.edu/dining/" target="_blank">
               <img class="indexSponsor" src="images\sponsors\dining.png" alt="Blugold Dining by Sodexo">
-            </a>
-            <a href="http://www.pepsi.com/" target="_blank">
-              <img class="indexSponsor" src="images\sponsors\pepsi.png" alt="Pepsi">
             </a>
             <a href="http://www.eauclaireford.com/" target="_blank">
               <img class="indexSponsor" src="images\sponsors\ford.png" alt="Ford">
