--- a/liveResults.html
+++ b/liveResults.html
@@ -81,7 +81,7 @@
 							<li role="presentation" class="divider"></li>
 							<li><a href="pastResults.html">Past Results</a></li>
 							<li role="presentation" class="divider"></li>
-							<li><a href="assets/rules.pdf" target="_blank">Rules</a></li>
+							<li><a href="assets/rules2017.pdf" target="_blank">Rules</a></li>
 						</ul>
 					</li>
 					<li class="sliding-middle-out"><a href="tickets.html">Tickets</a></li>
