Added new sponsors on sponsor page
sponsor

--- a/sponsors.html
+++ b/sponsors.html
@@ -159,7 +159,11 @@
 				</div>
 				<!-- #col-lg-3 col-md-4 col-xs-6 thumb -->
 				<div class="col-lg-3 col-md-4 col-xs-6 thumb">
-					<a href="http://www.theedgepubandeatery.com/" target="_blank"><img class="img-responsive" src="images\sponsors\edge.png" alt="Ford"></a>
+					<a href="http://www.theedgepubandeatery.com/" target="_blank"><img class="img-responsive" src="images\sponsors\edge.png" alt="The Edge Pub and Eatery"></a>
+				</div>
+				<!-- #col-lg-3 col-md-4 col-xs-6 thumb -->
+				<div class="col-lg-3 col-md-4 col-xs-6 thumb">
+					<a href="http://www.uwec.edu/dining/" target="_blank"><img class="img-responsive" src="images\sponsors\dining.png" alt="Blugold Dining by Sodexo">
 				</div>
 				<!-- #col-lg-3 col-md-4 col-xs-6 thumb -->
 				<div class="col-lg-3 col-md-4 col-xs-6 thumb">
@@ -171,13 +175,15 @@
 				</div>
 					<!-- #col-lg-3 col-md-4 col-xs-6 thumb -->
 				<div class="col-lg-3 col-md-4 col-xs-6 thumb">
-					<a href="http://www.uwec.edu/dining/" target="_blank"><img class="img-responsive" src="images\sponsors\dining.png" alt="Blugold Dining by Sodexo">
+					<a href="http://www.xtrememotorsportsllc.com/" target="_blank"><img class="img-responsive" src="images\sponsors\XTREME MOTORSPORTS_2C_DIGITAL BLUE.png" alt="Dynamic Fitness and Strength">
 				</div>
 				<!-- #col-lg-3 col-md-4 col-xs-6 thumb -->
 				<div class="col-lg-3 col-md-4 col-xs-6 thumb">
 					<a href="https://mydynamicfitness.com/" target="_blank"><img class="img-responsive" src="images\sponsors\Dynamic-Logo-OnWhite.png" alt="Dynamic Fitness and Strength">
 				</div>
-			</div>
+
+
+
 			<!-- #row  -->
 		</div>
 		<!-- #container -->
