--- a/lodging.html
+++ b/lodging.html
@@ -145,21 +145,21 @@
               <td>809 W. Clairemont
                 <br /> Eau Claire, WI 54701</td>
               <td>(715) 834-6611</td>
-              <td>$74.95</td>
+              <td>$59.95</td>
             </tr>
             <tr>
               <td><a target="_blank" alt="Baymont!Inn &amp; Suites" href="http://www.baymontinns.com/hotels/wisconsin/eau-claire/baymont-inn-and-suites-eau-claire-wi/hotel-overview?WID=LC:BU:20150901:Rio:Local">Baymont Inn &amp; Suites</a></td>
               <td>4075 Commonwealth
                 <br /> Eau Claire, WI 54701</td>
               <td>(715) 839-7100</td>
-              <td>$75.00</td>
+              <td>$79.00</td>
             </tr>
             <tr>
               <td><a target="_blank" alt="Clarion Hotel Campus Area and!Green Mill Restaurant" href="https://www.choicehotels.com/wisconsin/eau-claire/clarion-hotels/wi211">Clarion Hotel Campus Area and!Green Mill Restaurant</a></td>
                 <td>2703 Craig Rd.
                   <br /> Eau Claire, WI 54701</td>
                 <td>(715) 835-2211</td>
-                <td>$86.95</td>
+                <td>$92.00</td>
 
             </tr>
             <tr>
@@ -167,41 +167,37 @@
               <td>3614 Gateway DR
                 <br /> Eau Claire, WI 54701</td>
               <td>(715) 832-7289</td>
-              <td>$99.00</td>
+              <td>$97.00</td>
             </tr>
             <tr>
               <td><a target="_blank" alt="Hampton Inn &amp; Suites-Lake Hallie" href="http://hamptoninn3.hilton.com/en/hotels/wisconsin/hampton-inn-and-suites-chippewa-falls-EAUCFHX/index.html">Hampton Inn &amp; Suites-Lake Hallie</a></td>
               <td>12707 30th Ave
-                <br />
-    Chippewa Falls, WI 54729</td>
-    <td>(715) 726-3000</td>
+                <br />Chippewa Falls, WI 54729</td>
+    					<td>(715) 726-3000</td>
                 <td>$119.00</td>
             </tr>
             <tr>
               <td><a target="_blank" alt="Holiday Inn Eau Claire South &amp; Jonny's Italian Steakhouse" href="http://www.ihg.com/holidayinn/hotels/us/en/eau-claire/eauhi/hoteldetail">Holiday Inn Eau Claire South &amp; Jonny's Italian Steakhouse</a></td>
               <td>4751 Owen Ayres Court
-                <br />
-    Eau Claire, WI 54701</td>
-    <td>(715) 830-9889</td>
-                <td>$116.95</td>
+                <br />Eau Claire, WI 54701</td>
+    				<td>(715) 830-9889</td>
+                <td>$118.95</td>
             </tr>
 
             <tr>
               <td><a target="_blank" alt="Plaza Hotel &amp; Suites" href="http://www.plazaeauclaire.com/">Plaza Hotel &amp; Suites</a></td>
               <td>1202 W Clairemont
-                <br />
-    Eau Claire, WI 54701</td>
-    <td>(715) 834-3181</td>
+                <br />Eau Claire, WI 54701</td>
+    				<td>(715) 834-3181</td>
                 <td>$109.00</td>
             </tr>
 
             <tr>
               <td><a target="_blank" alt="Holiday Inn Express Hotel Suites" href="http://www.ihg.com/holidayinnexpress/hotels/us/en/chippewa-falls/halwi/hoteldetail">Holiday Inn Express Hotel Suites</a></td>
               <td>12858 26th AVE
-                <br />
-    Chippewa Falls, WI 54729</td>
-    <td>(715) 723-4654</td>
-                <td>$94.95</td>
+                <br />  Chippewa Falls, WI 54729</td>
+    				<td>(715) 723-4654</td>
+                <td>$99.95</td>
             </tr>
 
           </tbody>
@@ -209,7 +205,7 @@
 <br />
 <br />
         <div class="btn-center">
-          <a target="_blank" href="assets/hotels.pdf" <button class="btn1" >Click here to see more details</button></a>
+          <a target="_blank" href="assets/2017 Hotel Rate Grid.pdf" <button class="btn1" >Click here to see more details</button></a>
         </div>
       </div>
       <!-- #table-responsive -->
