--- a/lodging.html
+++ b/lodging.html
@@ -154,6 +154,12 @@
               <td>(715) 839-7100</td>
               <td>$79.00</td>
             </tr>
+						<td><a target="_blank" alt="Best Western PLUS Eau Claire Conference Center" href="https://www.bestwestern.com/content/best-western/en_US/booking-path/hotel-details.50126.html?iata=00170260&propertyCode=50126&sob=PBMS3&cm_mmc=PS-_-PBMS3-_-Best%20Western%20Plus%20INI-_-50126">Best Western PLUS Eau Claire Conference Center</a></td>
+						<td>3340 Mondovi Rd.
+							<br /> Eau Claire, WI 54701</td>
+						<td>(715) 838-9989</td>
+						<td>$109.99</td>
+					</tr>
             <tr>
               <td><a target="_blank" alt="Clarion Hotel Campus Area and!Green Mill Restaurant" href="https://www.choicehotels.com/wisconsin/eau-claire/clarion-hotels/wi211">Clarion Hotel Campus Area and!Green Mill Restaurant</a></td>
                 <td>2703 Craig Rd.
@@ -183,23 +189,20 @@
     				<td>(715) 830-9889</td>
                 <td>$118.95</td>
             </tr>
-
-            <tr>
-              <td><a target="_blank" alt="Plaza Hotel &amp; Suites" href="http://www.plazaeauclaire.com/">Plaza Hotel &amp; Suites</a></td>
-              <td>1202 W Clairemont
-                <br />Eau Claire, WI 54701</td>
-    				<td>(715) 834-3181</td>
-                <td>$109.00</td>
-            </tr>
-
-            <tr>
+              <tr>
               <td><a target="_blank" alt="Holiday Inn Express Hotel Suites" href="http://www.ihg.com/holidayinnexpress/hotels/us/en/chippewa-falls/halwi/hoteldetail">Holiday Inn Express Hotel Suites</a></td>
               <td>12858 26th AVE
                 <br />  Chippewa Falls, WI 54729</td>
     				<td>(715) 723-4654</td>
                 <td>$99.95</td>
             </tr>
-
+						<tr>
+							<td><a target="_blank" alt="Plaza Hotel &amp; Suites" href="http://www.plazaeauclaire.com/">Plaza Hotel &amp; Suites</a></td>
+							<td>1202 W Clairemont
+								<br />Eau Claire, WI 54701</td>
+						<td>(715) 834-3181</td>
+								<td>$109.00</td>
+						</tr>
           </tbody>
         </table>
 <br />
