--- a/lodging.html
+++ b/lodging.html
@@ -161,12 +161,11 @@
 						<td>$109.99</td>
 					</tr>
             <tr>
-              <td><a target="_blank" alt="Clarion Hotel Campus Area and!Green Mill Restaurant" href="https://www.choicehotels.com/wisconsin/eau-claire/clarion-hotels/wi211">Clarion Hotel Campus Area and!Green Mill Restaurant</a></td>
+              <td><a target="_blank" alt="Clarion Hotel Campus Area and!Green Mill Restaurant" href="https://www.choicehotels.com/wisconsin/eau-claire/clarion-hotels/wi211">Clarion Hotel Campus Area &amp; Green Mill Restaurant</a></td>
                 <td>2703 Craig Rd.
                   <br /> Eau Claire, WI 54701</td>
                 <td>(715) 835-2211</td>
                 <td>$92.00</td>
-
             </tr>
             <tr>
               <td><a target="_blank" alt="Country Inn &amp; Suites By Carlson" href="http://hotels.countryinns.com/wi/eauclaire/hotels_eau-claire_wi_wiclaire.html">Country Inn &amp; Suites By Carlson</a></td>
@@ -176,6 +175,14 @@
               <td>$97.00</td>
             </tr>
             <tr>
+							<tr>
+	              <td><a target="_blank" alt="GrandStay Residential Suites Hotel" href="http://www.grandstayhospitality.com/find-a-hotel/locations/eau-claire/overview?rt=google|cpc|GSH01-GrandStay-Hospitality-Brand|grandstay%20residential%20suites%20hotel%20eau%20claire&gclid=CPnCiczpyM8CFZAAaQod-oAJWQ">GrandStay Residential Suites Hotel</a></td>
+	                <td>5310 Prill Rd.
+	                  <br />Eau Claire, WI 54701</td>
+	                <td>(715) 834-1700</td>
+	                <td>$119.90</td>
+
+	            </tr>
               <td><a target="_blank" alt="Hampton Inn &amp; Suites-Lake Hallie" href="http://hamptoninn3.hilton.com/en/hotels/wisconsin/hampton-inn-and-suites-chippewa-falls-EAUCFHX/index.html">Hampton Inn &amp; Suites-Lake Hallie</a></td>
               <td>12707 30th Ave
                 <br />Chippewa Falls, WI 54729</td>
@@ -202,6 +209,27 @@
 								<br />Eau Claire, WI 54701</td>
 						<td>(715) 834-3181</td>
 								<td>$109.00</td>
+						</tr>
+						<tr>
+							<td><a target="_blank" alt="Quality Inn Eau Claire" href="http://www.hotelsone.com/eau-claire-hotels-us/quality-inn.html?as=g&aid=65548653518&dsti=125710&dstt=8&label=bh125710&akw=%2Beau%20%2Bclaire%20%2Bquality%20%2Binn&asrc=Search&ast=_%2Beau%20%2Bclaire%20%2Bquality%20%2Binn&gclid=CN7N98DqyM8CFQEQaQoddHgGmw">Quality Inn Eau Claire</a></td>
+							<td>3117 Craig Rd.
+								<br />Eau Claire, WI 54701</td>
+						<td>(715) 833-9798</td>
+								<td>$79.00</td>
+						</tr>
+						<tr>
+							<td><a target="_blank" alt="Staybridge Suites" href="https://www.staybridge.com/hotels/us/en/reservation?qAdlt=1&qBrs=6c.hi.ex.rs.ic.cp.in.sb.cw.cv.ul.vn.ki&qChld=0&qFRA=1&qGRM=0&qIta=99629062&qPSt=0&qRRSrt=rt&qRef=df&qRms=1&qRpn=1&qRpp=20&qSHp=1&qSmP=3&qSrt=sBR&qWch=0&srb_u=1&icdv=99629062&sicreative=95533305136&siclientid=1921&sitrackingid=59914364&dp=true&glat=SEAR">Staybridge Suites</a></td>
+							<td>1515 Bluestern Blvd
+								<br />Altoona, WI 54702</td>
+						<td>(715) 830-0800</td>
+								<td>$114.95</td>
+						</tr>
+						<tr>
+							<td><a target="_blank" alt="The Lismore" href="http://doubletree3.hilton.com/en/hotels/wisconsin/the-lismore-hotel-eau-claire-a-doubletree-by-hilton-hotel-EAUDTDT/index.html">The Lismore</a></td>
+							<td>333 Gibson St.
+								<br />Eau Claire, WI 54701</td>
+						<td>(715) 835-8888 </td>
+								<td>$99.00</td>
 						</tr>
           </tbody>
         </table>
