Added Sponsors to the bottom of the Contact page (all)
(all sponsors)

--- a/sponsors.html
+++ b/sponsors.html
@@ -175,7 +175,7 @@
 				</div>
 					<!-- #col-lg-3 col-md-4 col-xs-6 thumb -->
 				<div class="col-lg-3 col-md-4 col-xs-6 thumb">
-					<a href="http://www.xtrememotorsportsllc.com/" target="_blank"><img class="img-responsive" src="images\sponsors\XTREME MOTORSPORTS_2C_DIGITAL BLUE.png" alt="Dynamic Fitness and Strength">
+					<a href="http://www.xtrememotorsportsllc.com/" target="_blank"><img class="img-responsive" src="images\sponsors\XTREME MOTORSPORTS_2C_DIGITAL BLUE.png" alt="Xtreme Motorsports, LLC">
 				</div>
 				<!-- #col-lg-3 col-md-4 col-xs-6 thumb -->
 				<div class="col-lg-3 col-md-4 col-xs-6 thumb">
