all sponsors are on the bottom page of every page
sponsors footer

--- a/contact.html
+++ b/contact.html
@@ -294,7 +294,7 @@
 				<img class="sponsorBarImg" src="images\sponsors\XTREME MOTORSPORTS_2C_DIGITAL BLUE.png" alt="Xtreme Motorsports, LLCXtreme Motorsports, LLC">
 			</a>
 			<a href="https://mydynamicfitness.com/" target="_blank">
-				<img class="sponsorBarImg" src="images\sponsors\Dynamic-Logo-OnWhite.png" alt="Dynamic Fitness and Strength"">
+				<img class="sponsorBarImg" src="images\sponsors\Dynamic-Logo-OnWhite.png" alt="Dynamic Fitness and Strength">
 			</a>
   </div>
   <br />
